--- a/client/src/assets/css/setcion/_board.css
+++ b/client/src/assets/css/setcion/_board.css
@@ -288,7 +288,7 @@
 }
 
 .board__detail>.bottom>.btnWrap {
-    display: flex;
+    /* display: flex; */
 }
 
 .board__detail>.bottom>.btnWrap>.modify,
