--- a/client/src/assets/css/setcion/_join.css
+++ b/client/src/assets/css/setcion/_join.css
@@ -1,7 +1,7 @@
 .join__wrap {
-    max-width: 1200px;
+    width: 100%;
     margin: 120px auto;
-    width: 90%;
+    padding: 5vw;
 }
 
 .join__title {
@@ -104,8 +104,6 @@
 
 }
 
-
-
 .agree__box .check {
     margin: 10px 0;
 
@@ -120,8 +118,6 @@
     align-items: center;
 }
 
-
-
 .agree__box .check input {
     position: absolute;
     z-index: -1;
@@ -129,11 +125,8 @@
 
 }
 
-
-
 .agree__box .check button {
     margin-left: 10px;
-    /* Adjust the margin as needed to create space */
     display: inline-block;
     padding: 8px 12px;
     background-color: var(--white);
@@ -181,9 +174,7 @@
     border: 1px;
     padding: 21px 20px 20px 40px;
     display: flex;
-    /* Add display: flex; to enable flex properties */
     align-items: center;
-    /* Center the content vertically */
     background-color: var(--white200);
 }
 
@@ -220,19 +211,21 @@
 
 .join__agree .next {
     border: 1px solid var(--black);
-    /* var(--black)는 적절한 색상 변수로 변경하세요 */
     padding: 10px;
     background-color: var(--black);
-    /* 버튼 배경색을 원하는 색으로 변경하세요 */
     color: var(--white);
-    /* 버튼 텍스트 색을 원하는 색으로 변경하세요 */
     cursor: pointer;
-    /* 포인터 모양의 커서를 사용하여 사용자에게 버튼을 클릭할 수 있다는 힌트를 제공합니다. */
     display: block;
-    margin: 0 auto;
-    margin-top: 50px;
+    margin: 50px auto 0;
     width: 150px;
     border-radius: 5px;
+}
+
+.join__agree .next a {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    display: block;
 }
 
 .scroll__style {
@@ -269,24 +262,22 @@
     line-height: 1.6;
 }
 
-/* 추가된 스타일 */
 .agree__box .scroll.show {
     max-height: 500px;
 }
 
-
 .join {
+    width: 100%;
     display: flex;
     align-items: center;
-    /* Align items vertically in the center */
 }
 
 .join label {
     width: 110px;
-    /* Set a fixed width for labels */
     margin-right: 60px;
-    /* Adjust the right margin for labels */
     margin-bottom: 80px;
+    font-size: 1rem;
+    font-weight: 700;
 }
 
 .join label::before {
@@ -296,7 +287,6 @@
 
 .write {
     flex: 1;
-    /* Allow the write div to take up remaining space */
     padding-bottom: 60px;
 }
 
@@ -306,14 +296,17 @@
     width: 100%;
     height: 40px;
     box-sizing: border-box;
-    /* Default border color */
 }
 
-/* Change border color on focus */
 .input__style:hover {
     padding: 8px;
     border: 2px solid var(--red);
-    /* Red border color */
+}
+
+.input__style:focus {
+    outline: 0;
+    padding: 8px;
+    border: 2px solid var(--red);
 }
 
 .join__insert {
@@ -335,7 +328,15 @@
 
 .msg {
     font-size: 14px;
-    color: var(--black);
+    color: var(--gray);
+}
+
+.join .write input[type='email'] {
+    width: 75%;
+}
+
+.join .write .btn.email {
+    width: 20%;
 }
 
 
