--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -15,3 +15,4 @@
 @import "./setcion/_leagueDetail.css";
 @import "./setcion/_playDetail.css";
 @import "./setcion/_join.css";
+@import "./setcion/_videoview.css";
