--- a/client/src/assets/css/setcion/_board.css
+++ b/client/src/assets/css/setcion/_board.css
@@ -35,7 +35,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 40px 0;
+    padding-top: 20px;
 }
 
 .board__search>.search__left>p {
@@ -65,12 +65,31 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 50px 0;
+    margin: 25px 0;
 }
 
-.board__btn>.nav__left>.nav__sort>form>input {
-    width: 30px;
-    height: 30px;
+.board__btn .nav__left {
+    padding: 10px 15px;
+    border-radius: 5px;
+    border: 1px solid #d9d9d9;
+}
+
+.board__btn fieldset {
+    border: none;
+    display: flex;
+    align-items: center;
+}
+
+.board__btn fieldset label {
+    margin-right: 10px;
+}
+
+.board__btn fieldset input {
+    width: 25px;
+    height: 25px;
+    border: 1px solid #d9d9d9;
+    border-radius: 5px;
+    margin-right: 5px;
 }
 
 .board__btn>.nav__right>.nav__write {
@@ -104,12 +123,12 @@
 }
 
 .board__list>ul>li>.list__left>.left__title>.hot {
-    padding: 10px 30px;
+    padding: 7px 30px;
     color: #0057FF;
     background-color: rgba(0, 87, 255, 0.1);
     border-radius: 5px;
     margin-right: 1.5rem;
-    font-size: 0.8rem;
+    font-size: 1rem;
     display: none;
 }
 
@@ -118,8 +137,8 @@
 }
 
 .board__list>ul>li>.list__left>.left__title>.title>h3 {
-    font-size: 1.5rem;
-    font-weight: 500;
+    font-size: 1.4rem;
+    font-weight: 600;
 }
 
 .board__list>ul>li>.list__left>.left__desc {
@@ -255,10 +274,7 @@
 }
 
 .board__detail>.profill>.profill__right>div>svg {
-    width: 0.8rem;
-    height: 0.8rem;
-    fill: var(--navy);
-    margin-right: 0.5rem;
+    margin-right: 15px;
 }
 
 .board__detail>.desc {
@@ -443,4 +459,64 @@
     font-size: 0.8rem;
     border: 1px solid rgba(0, 0, 0, 0.15);
     cursor: pointer;
+}
+
+
+/* boardwrite */
+.board__detail.write {}
+
+.board__detail.write input {
+    font-size: 1.2rem;
+    font-weight: 500;
+    margin-bottom: 20px;
+    background-color: #fafafa;
+    padding: 10px 15px;
+    width: 30%;
+    min-width: 300px;
+}
+
+.board__detail.write textarea {
+    width: 100%;
+    height: 200px;
+    padding: 15px;
+    background-color: #fafafa;
+    resize: none;
+    margin-bottom: 20px;
+}
+
+.board__detail.write .bottom {
+    display: flex;
+    justify-content: space-between;
+}
+
+.board__detail.write fieldset .profill__left {
+    text-align: right;
+    font-size: 1.2rem;
+    margin-bottom: 20px;
+}
+
+.board__detail.write fieldset {
+    border: none;
+}
+
+.board__detail.write .btnWrap {
+    text-align: right;
+}
+
+.board__detail.write .list {
+    padding: 10px 15px;
+    border-radius: 5px;
+    color: var(--black);
+    font-size: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    cursor: pointer;
+}
+
+.board__detail.write .writebtn {
+    padding: 10px 15px;
+    border-radius: 5px;
+    color: var(--white);
+    font-size: 1rem;
+    background-color: #0057FF;
+    margin-left: 15px;
 }
