--- a/client/src/assets/css/setting/_common.css
+++ b/client/src/assets/css/setting/_common.css
@@ -51,6 +51,7 @@
 /* ------------------------------ */
 
 .header__left>.logo {
+    cursor: pointer;
     font-size: 1rem;
     font-weight: 700;
     color: var(--white);
