--- a/client/src/assets/css/setting/_common.css
+++ b/client/src/assets/css/setting/_common.css
@@ -48,6 +48,31 @@
     z-index: 1000;
 }
 
+.aside__score .score__title #link {
+    width: 100px;
+    font-size: 0.8rem;
+    color: var(--white);
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.15);
+    border-radius: 5px;
+    padding: 5px 10px;
+    text-align: left;
+    box-sizing: border-box;
+    /* margin-right: 1rem; */
+    margin-left: 10px;
+}
+
+.aside__score .score__title #link option {
+    font-size: 0.8rem;
+    color: var(--black);
+}
+
+/* swiper */
+.swiper-button-next:after,
+.swiper-button-prev:after {
+    color: var(--white);
+}
+
 /* ------------------------------ */
 
 .header__left>.logo {
