--- a/client/src/assets/css/setcion/_mypage.css
+++ b/client/src/assets/css/setcion/_mypage.css
@@ -106,7 +106,7 @@
     margin-top: 15px;
 }
 
-.teams__logo .logo {
+.mypage__info .right .info .teams__logo .logo {
     background-image: url(../../img/logo_chelsea.png);
     width: 30px;
     height: 30px;
