--- a/client/src/assets/css/setcion/_mypage.css
+++ b/client/src/assets/css/setcion/_mypage.css
@@ -180,7 +180,7 @@
     justify-content: center;
 }
 
-.right__text a img {
+.right__text svg {
     width: 25px;
     height: 25px;
     margin-right: 5px;
