--- a/client/src/assets/css/setcion/_leagueDetail.css
+++ b/client/src/assets/css/setcion/_leagueDetail.css
@@ -45,12 +45,41 @@
             width: 100%;
             height: calc(100% + 30px);
             min-width: 250px;
-            background-image: url(../../img/detail_faceon.png);
-            background-position: bottom left;
+            background-position: center bottom;
             background-repeat: no-repeat;
             background-size: contain;
             z-index: 1;
             opacity: 0.7;
+        }
+
+        /* best player img */
+        .detail__info .left.epl::before {
+            background-image: url(https://www.footyrenders.com/render/erling-braut-haland-78-390x381.png);
+            background-size: 90%;
+        }
+
+        .detail__info .left.laliga::before {
+            background-image: url(https://www.footyrenders.com/render/jude-bellingham-2-275x540.png);
+            background-size: 45%;
+        }
+
+        .detail__info .left.serie::before {
+            background-image: url(https://www.footyrenders.com/render/lautaro-martinez-43-330x540.png);
+            background-size: 55%;
+        }
+
+        .detail__info .left.serie::before {
+            background-image: url(https://www.footyrenders.com/render/lautaro-martinez-43-330x540.png);
+        }
+
+        .detail__info .left.ligue1::before {
+            background-image: url(https://www.footyrenders.com/render/kylian-mbappe-153-318x540.png);
+            background-size: 55%;
+        }
+
+        .detail__info .left.bundesliga::before {
+            background-image: url(https://www.footyrenders.com/render/harry-kane-73-390x441.png);
+            background-size: 80%;
         }
 
         .detail__info .left .logo {
@@ -68,7 +97,7 @@
         }
 
         .detail__info .left .logo img {
-            width: 80%;
+            width: 50%;
         }
 
         .detail__info .right {
@@ -79,8 +108,7 @@
             grid-template-columns: repeat(2, 50%);
             padding-top: 52px;
             padding-left: 5px;
-            grid-template-areas:
-                "area1 area2"
+            grid-template-areas: "area1 area2"
                 "area3 area4"
                 "area5 area4"
             ;
@@ -208,6 +236,11 @@
             text-align: center;
         }
 
+        .right__text select option {
+            color: var(--black);
+            text-align: center;
+        }
+
         .content__bottom .result__title {
             width: 100%;
             height: 93px;
@@ -243,7 +276,7 @@
         }
 
         .result__info .result__left .league__logo {
-            background-image: url(../../img/logo_chelsea.png);
+            /* background-image: url(../../img/logo_chelsea.png); */
             width: 44px;
             height: 44px;
             background-size: cover;
@@ -278,12 +311,21 @@
         }
 
         .result__center .league__team {
+            width: 33.333%;
             display: flex;
             align-items: center;
         }
 
+        .result__center .league__team.home {
+            justify-content: left;
+        }
+
+        .result__center .league__team.away {
+            justify-content: right;
+        }
+
         .result__center .league__team .logo {
-            background-image: url(../../img/logo_chelsea.png);
+            /* background-image: url(../../img/logo_chelsea.png); */
             width: 33px;
             height: 33px;
             background-size: cover;
@@ -293,27 +335,32 @@
 
         .result__center .league__team .name {
             padding: 0 25px;
-            font-weight: 500;
-            color: #B8BAC1;
-            font-size: 1.3rem;
-        }
-
-        .result__center .league__team .name.win {
-            padding: 0 25px;
             font-weight: 700;
             color: var(--black);
             font-size: 1.3rem;
+        }
+
+        .result__center .league__team .name.lose {
+            font-weight: 500;
+            color: #B8BAC1;
         }
 
         .result__center .league__score {
+            width: 33.333%;
+            display: flex;
+            justify-content: center;
+        }
+
+        .result__center .league__score span {
+            box-sizing: border-box;
             padding: 5px 20px;
             background-color: #F0F0F0;
             border-radius: 5px;
-            color: #B8BAC1;
+            color: var(--black);
             font-size: 1.3rem;
             font-weight: 700;
         }
 
-        .result__center .league__score em {
-            color: var(--black);
+        .result__center .league__score span em.lose {
+            color: #B8BAC1;
         }
