--- a/client/src/assets/css/setcion/_mypage.css
+++ b/client/src/assets/css/setcion/_mypage.css
@@ -54,20 +54,59 @@
 }
 
 .mypage__info .left .profile {
+    position: relative;
+}
+
+.mypage__info .left .profile label {
     width: 9.6354vw;
     height: 9.6354vw;
     min-width: 100px;
     min-height: 100px;
     border-radius: 50%;
-    margin-bottom: 5px;
+    margin-bottom: 20px;
+    background-color: #fff;
     display: flex;
     align-items: center;
     justify-content: center;
     z-index: 2;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.mypage__info .left .profile label span svg {
+    opacity: 0;
+    position: absolute;
+    width: 50%;
+    height: 50%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.mypage__info .left .profile label span svg:hover {
+    opacity: 0.5;
+    background-color: #9696963a;
 }
 
 .mypage__info .left .profile img {
     width: 100%;
+    height: 100%;
+}
+
+.mypage__info .left .profile button {
+    position: absolute;
+    border-radius: 10px;
+    display: inline-block;
+    width: 70%;
+    font-size: 14px;
+    padding: 5px;
+    z-index: 10;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #fff;
+    cursor: pointer;
 }
 
 .mypage__info .right {
