--- a/client/src/assets/css/setcion/_main.css
+++ b/client/src/assets/css/setcion/_main.css
@@ -289,6 +289,10 @@
     width: 50%;
 }
 
+.today__highlight>.highlight__info>.btn {
+    display: inline-block;
+}
+
 .today__highlight>.highlight__info>.btn>a {
     display: flex;
 }
