--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -16,3 +16,4 @@
 @import "./setcion/_playDetail.css";
 @import "./setcion/_join.css";
 @import "./setcion/_videoview.css";
+@import "./setcion/_news.css";
