--- a/client/src/assets/css/setcion/_main.css
+++ b/client/src/assets/css/setcion/_main.css
@@ -448,13 +448,28 @@
     font-weight: 700;
     text-transform: uppercase;
     width: 100%;
-    height: 70%;
+    height: 10%;
     /* ...효과 */
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 10;
     -webkit-box-orient: vertical;
+}
+
+.main__board>.card>.info {
+    display: flex;
+}
+
+.main__board>.card>.info>.author {
+    margin-left: 1rem;
+}
+
+.main__board>.card>.info>.author>span,
+.main__board>.card>.info>.date>span {
+    font-size: 0.8rem;
+    color: #4d4d4d;
+    font-weight: 700;
 }
 
 .main__board>.card>.btn {
@@ -465,6 +480,14 @@
     height: 10%;
     display: flex;
     justify-content: flex-end;
+}
+
+.main__board>.card>.btn>.date {
+    margin-right: 0.5rem;
+}
+
+.main__board>.card>.btn>.author {
+    margin-right: 2rem;
 }
 
 .main__board>.card>.btn>.like {
@@ -483,6 +506,13 @@
     font-size: 1rem;
     color: #D9D9D9;
 }
+
+.main__board>.card>.btn>.author>span,
+.main__board>.card>.btn>.date>span {
+    font-size: 0.8rem;
+    color: var(--black);
+}
+
 
 /* //main_-board */
 
