--- a/client/src/assets/css/setcion/_playDetail.css
+++ b/client/src/assets/css/setcion/_playDetail.css
@@ -1,6 +1,4 @@
-.play__wrap {
-    padding-left: 55px;
-}
+.play__wrap {}
 
 .league__info {
     max-width: 1200px;
@@ -12,8 +10,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 120px;
-    /* 수평 가운데 정렬 */
+    margin-top: 50px;
 }
 
 .league__title img {
@@ -31,7 +28,6 @@
 }
 
 .play__info {
-    margin-top: 4.16vw;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -56,15 +52,20 @@
     height: 13vw;
     min-width: 100px;
     min-height: 100px;
-    /* border: 8px solid green; */
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 .league__home .logo img {
-    width: 100%;
+    width: 70%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
 }
 
 .league__home h3 {
@@ -79,10 +80,12 @@
     font-size: 1.3rem;
     font-weight: 900;
     margin-top: 40px;
+    text-transform: uppercase;
 }
 
 .league__home p em {
-    color: green;
+    color: #f44336;
+    margin-left: 10px;
 }
 
 .league__away {
@@ -102,15 +105,20 @@
     height: 13vw;
     min-width: 100px;
     min-height: 100px;
-    /* border: 8px solid var(--red); */
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 .league__away img {
-    width: 100%;
+    width: 70%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
 }
 
 .league__away h3 {
@@ -125,10 +133,12 @@
     font-size: 1.3rem;
     font-weight: 900;
     margin-top: 40px;
+    text-transform: uppercase;
 }
 
 .league__away p em {
-    color: var(--red);
+    color: #3F51B5;
+    margin-left: 10px;
 }
 
 .league__match {
@@ -143,7 +153,8 @@
 
 
 .league__match .date {
-    font-size: 1.5rem;
+    margin-bottom: 30px;
+    font-size: 1.7rem;
     font-weight: 700;
     color: var(--black);
 }
@@ -153,15 +164,16 @@
 }
 
 .league__match .score {
-    font-size: 20px;
+    font-size: 60px;
     line-height: 1;
-    font-weight: 700;
-    padding: 10px 0;
+    font-weight: 900;
+    margin-bottom: 30px;
     text-transform: uppercase;
 }
 
 .league__match .playdata {
     font-size: 1.2rem;
+    font-weight: 700;
     color: var(--black);
 }
 
@@ -181,15 +193,30 @@
 
 }
 
-.league__match .draw {
-    font-size: 1.3rem;
+.league__match .referee {
+    display: flex;
+    align-items: center;
+    font-size: 1.5rem;
     font-weight: 900;
     color: var(--black);
     margin-top: 30px;
+    text-transform: uppercase;
 }
 
-.league__match .draw em {
-    color: #CEC85D;
+.league__match .referee span {
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    background-image: url(../../img/referee.svg);
+    background-position: center center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-right: 5px;
+}
+
+.league__match .referee em {
+    color: var(--gray);
+    margin-right: 5px;
 }
 
 .list {
@@ -203,7 +230,7 @@
     align-items: center;
     justify-content: center;
     height: 100%;
-    margin-top: 100px;
+    margin-top: 30px;
 }
 
 .list li {
@@ -244,7 +271,7 @@
 .play__bottom {
     width: 100%;
     height: 2000px;
-    padding-left: 55px;
+
     background-color: #F2F3F4;
     display: flex;
     flex-direction: column;
@@ -277,10 +304,19 @@
 
 .play__status .status__top>div:nth-child(2) {
     margin: 0 40px;
+    width: 20%;
+}
+
+.play__status .status__top>div:nth-child(1) {
+    text-align: right;
+}
+
+.play__status .status__top>div:nth-child(3) {
+    text-align: left;
 }
 
 .play__status .status__top .team {
-    width: 200px;
+    width: 40%;
     font-size: 2rem;
     font-weight: 700;
     display: inline-block;
@@ -299,7 +335,8 @@
 .status__progress .progress__left {
     width: 35%;
     height: 10px;
-    background-color: var(--gray);
+    border-radius: 30px;
+    background-color: #cfcfcf;
     position: relative;
     --progress-width: 50%;
 }
@@ -308,9 +345,10 @@
     position: absolute;
     content: '';
     right: 0;
+    border-radius: 30px;
     width: var(--progress-width);
     height: 10px;
-    background-color: #00774a;
+    background-color: #f44336;
     max-width: 100%;
 }
 
@@ -324,20 +362,30 @@
 
 .status__progress .progress__text .score {
     font-size: 1.4rem;
+    width: 30%;
+}
+
+.status__progress .progress__text>div:nth-child(1) {
+    text-align: right;
 }
 
 .status__progress .progress__text>div:nth-child(2) {
     font-size: 1rem;
     font-weight: 700;
-    width: 100px;
+    width: 40%;
     color: var(--gray);
     text-align: center;
+}
+
+.status__progress .progress__text>div:nth-child(3) {
+    text-align: left;
 }
 
 .status__progress .progress__right {
     width: 35%;
     height: 10px;
-    background-color: var(--gray);
+    border-radius: 30px;
+    background-color: #cfcfcf;
     position: relative;
     --progress-width: 50%;
 }
@@ -347,8 +395,9 @@
     content: '';
     left: 0;
     width: var(--progress-width);
+    border-radius: 30px;
     height: 10px;
-    background-color: #c50000;
+    background-color: #3F51B5;
     max-width: 100%;
 }
 
