--- a/client/src/assets/css/setcion/_leagueDetail.css
+++ b/client/src/assets/css/setcion/_leagueDetail.css
@@ -67,6 +67,9 @@
     font-weight: 700;
 }
 
+#LeagueDetail {
+    padding: 55px 300px 0 55px;
+}
 
 /* detail__info */
 .detail__info {
@@ -314,7 +317,7 @@
 .content__bottom .result__title {
     width: 100%;
     height: 93px;
-    padding: 0px 50px 0 32px;
+    padding: 0px 32px;
     border-bottom: 1px solid #B8BAC1;
     display: flex;
     align-items: center;
@@ -353,6 +356,16 @@
     background-position: center center;
     background-repeat: no-repeat;
     margin-right: 10px;
+}
+
+.result__info .result__right a {
+    font-size: 1rem;
+    font-weight: 700;
+    color: #B8BAC1;
+}
+
+.result__info .result__right a:hover {
+    color: #5983FF;
 }
 
 .result__left .date {
@@ -435,4 +448,20 @@
 
 .result__center .league__score span em.lose {
     color: #B8BAC1;
+}
+
+@media(max-width: 1000px) {
+    #LeagueDetail {
+        padding: 55px 0 0 55px;
+    }
+
+    .leagueAside {
+        display: none;
+    }
+}
+
+@media(max-width: 600px) {
+    #LeagueDetail {
+        padding: 130px 0 0 0;
+    }
 }
